# textory-tools

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: apple-release.yml  ci.yml  cli-release.yml  desktop-release.yml  notify-deploy.yml
app/: .env.native  index.html  package.json  vite.config.ts
app/public/: privacy.html  site.webmanifest  staticwebapp.config.json
app/src/: App.svelte  Main.svelte  app.css  main.ts  theme.css  vite-env.d.ts
app/src/components/: Admin.svelte  Help.svelte  Login.svelte  Palette.svelte  Privacy.svelte  Search.svelte  Settings.svelte  Shell.svelte  SnippetEditor.svelte  SnippetList.svelte  SnippetView.svelte  Terms.svelte
app/src/lib/: admin.svelte.ts  api.ts  classify.svelte.ts  clipboard.ts  commands.ts  keys.ts  markdown.ts  overlay.svelte.ts  runtime.ts  search.svelte.ts  search.ts  snippets.svelte.ts  stores.svelte.ts  theme.svelte.ts  toast.svelte.ts  view.svelte.ts
apple/: .gitignore  README.md
apple/Textory/Textory/: APIClient.swift  AddSnippetView.swift  AuthStore.swift  ImageCapture.swift  Keychain.swift  LoginView.swift  Models.swift  RegisterView.swift  RootView.swift  ScanView.swift  SnippetDetailView.swift  SnippetListView.swift  TextoryApp.swift  (+1 more)
apple/Textory/Textory.xcodeproj/: project.pbxproj
cli/: .gitignore  README.md  background.go  config.go  detach_unix.go  detach_windows.go  go.mod  main.go  main_test.go
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
(+1 files in other folders)
